# store

./: .gitignore  pyproject.toml
alegro/: logic.py  main.py  store.kv
